refactor : 약속 응답 Dto 통일하기  (#9)
* feat : 약속 공동 응답 폼 추가

* fix : 서비스 응답으로 PromiseQueryResult 사용

* fix : JPQL 오류로 수정

* fix : API 수정 및 변경된 응답 대응

* feat : 약속과 연관관계 편의 메소드 추가

* chore : 필요없는 Dto 삭제

---------

Co-authored-by: tomchccom <dreamkms2014@gmail.com>