@@ -2,14 +2,12 @@ package com.example.tomo.Promise;
 
 import com.example.tomo.Moim.Moim;
 import com.example.tomo.Moim.MoimRepository;
-import com.example.tomo.Moim_people.Moim_people;
 import com.example.tomo.Promise_people.PromisePeopleRepository;
 import com.example.tomo.Promise_people.Promise_people;
 import com.example.tomo.Users.User;
 import com.example.tomo.Users.UserErrorCode;
 import com.example.tomo.Users.UserException;
 import com.example.tomo.Users.UserRepository;
-import com.example.tomo.Users.dtos.ResponsePostUniformDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -17,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,14 +25,11 @@ public class PromiseService {
     private final UserRepository userRepository;
     private final PromisePeopleRepository promisePeopleRepository;
 
-    //약속 생성
     @Transactional
-    public ResponsePostUniformDto addPromise(addPromiseRequestDTO dto){
+    public Promise addPromise(addPromiseRequestDTO dto) {
 
         Moim moim = moimRepository.findByTitle(dto.getTitle())
-                .orElseThrow(() ->
-                        new PromiseException(PromiseErrorCode.MOIM_NOT_FOUND)
-                );
+                .orElseThrow(() -> new PromiseException(PromiseErrorCode.MOIM_NOT_FOUND));
 
         boolean duplicated =
                 promiseRepository.existsByPromiseName(dto.getPromiseName()) &&
@@ -56,78 +50,94 @@ public class PromiseService {
                 dto.getLocation()
         );
 
-        promise.setMoimBasedPromise(moim);
+        moim.addPromise(promise);
         promiseRepository.save(promise);
 
-        // 모임 내 약속으로 처리하기
-        List<Promise_people> moimPeopleList = moim.getMoimPeopleList()
-                .stream()
-                .map(mp -> new Promise_people(promise, mp.getUser(), false))
-                .collect(Collectors.toList());
+        // 🔥 모임 참가자 → 약속 참가자
+        List<Promise_people> promisePeopleList =
+                moim.getMoimPeopleList()
+                        .stream()
+                        .map(mp -> new Promise_people(promise, mp.getUser(), false))
+                        .toList();
 
-        promisePeopleRepository.saveAll(moimPeopleList);
+        promisePeopleRepository.saveAll(promisePeopleList);
 
-
-        return new ResponsePostUniformDto(
-                true,
-                promise.getPromiseName() + " 약속이 생성되었습니다"
-        );
+        return promise; // ⭐ 여기 중요
     }
 
-    // 약속 단일 조회
+
     @Transactional(readOnly = true)
-    public ResponseGetPromiseDto getPromise(String promiseName){
+    public PromiseQueryResult getPromise(String promiseName) {
 
         Promise promise = promiseRepository.findByPromiseName(promiseName)
-                .orElseThrow(() ->
-                        new PromiseException(PromiseErrorCode.PROMISE_NOT_FOUND)
-                );
+                .orElseThrow(() -> new PromiseException(PromiseErrorCode.PROMISE_NOT_FOUND));
 
-        return new ResponseGetPromiseDto(
-                promise.getPromiseName(),
-                promise.getPromiseDate(),
-                promise.getPromiseTime(),
-                promise.getPlace()
+        Moim moim = promise.getMoim();
+
+        return new PromiseQueryResult(
+                promise,
+                moim.getId(),
+                moim.getTitle()
         );
     }
 
-    //모임의 모든 약속 조회
+
     @Transactional(readOnly = true)
-    public List<ResponseGetPromiseDto> getAllPromise(String title){
-
-        Moim moim = moimRepository.findByTitle(title)
-                .orElseThrow(() ->
-                        new PromiseException(PromiseErrorCode.MOIM_NOT_FOUND)
-                );
-
-        return promiseRepository.findByMoimId(moim.getId());
-    }
-
-    // 본인의 모든 약속 조회(달력 출력용)
-    @Transactional(readOnly = true)
-    public List<ResponseGetPromiseDto> getAllPromiseByUserId(String uid) {
+    public List<PromiseQueryResult> getAllPromiseByUserId(String uid) {
 
         User user = userRepository.findByFirebaseId(uid)
                 .orElseThrow(() -> new UserException(UserErrorCode.USER_NOT_FOUND));
 
         return promisePeopleRepository.findPromisesByUserId(user.getId())
                 .stream()
-                .map(ResponseGetPromiseDto::from)
-                .collect(Collectors.toList());
+                .map(p -> new PromiseQueryResult(
+                        p,
+                        p.getMoim().getId(),
+                        p.getMoim().getTitle()
+                ))
+                .toList();
     }
 
-    // 본인의 남은 약속 조회
     @Transactional(readOnly = true)
-    public List<ResponseGetPromiseDto> getAllUpcomingPromiseByUserId(String userId) {
+    public List<PromiseQueryResult> getAllPromise(String moimTitle) {
 
-        User user = userRepository.findByFirebaseId(userId)
-                .orElseThrow(()-> new UserException(UserErrorCode.USER_NOT_FOUND));
+        Moim moim = moimRepository.findByTitle(moimTitle)
+                .orElseThrow(() -> new PromiseException(PromiseErrorCode.MOIM_NOT_FOUND));
 
-        return promisePeopleRepository.findUpcomingPromisesByUserId(user.getId(), LocalDate.now(), LocalTime.now())
+
+        return promiseRepository.findByMoimId(moim.getId())
                 .stream()
-                .map(ResponseGetPromiseDto::from)
-                .collect(Collectors.toList());
+                .map(promise -> new PromiseQueryResult(
+                        promise,
+                        moim.getId(),
+                        moim.getTitle()
+                ))
+                .toList();
     }
+
+
+
+    @Transactional(readOnly = true)
+    public List<PromiseQueryResult> getAllUpcomingPromiseByUserId(String uid) {
+
+        User user = userRepository.findByFirebaseId(uid)
+                .orElseThrow(() -> new UserException(UserErrorCode.USER_NOT_FOUND));
+
+        return promisePeopleRepository
+                .findUpcomingPromisesByUserId(
+                        user.getId(),
+                        LocalDate.now(),
+                        LocalTime.now()
+                )
+                .stream()
+                .map(p -> new PromiseQueryResult(
+                        p,
+                        p.getMoim().getId(),
+                        p.getMoim().getTitle()
+                ))
+                .toList();
+    }
+
 
 
 
